<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateTaskActivity"
    android:background="@drawable/tasks">

    <EditText
        android:id="@+id/textView1"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="99dp"
        android:layout_marginTop="160dp"
        android:background="@color/material_dynamic_tertiary30"
        android:hint="@string/enter_task_id"
        android:textColor="#26C6DA"
        android:textColorHint="#B0BEC5" />

    <EditText
        android:id="@+id/textView2"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="99dp"
        android:background="@color/material_dynamic_tertiary30"
        android:hint="@string/enter_task_name"
        android:textColor="#26C6DA"
        android:textColorHint="#B0BEC5" />

    <EditText
        android:id="@+id/textView3"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="99dp"
        android:background="@color/material_dynamic_tertiary30"
        android:hint="@string/enter_task_duedate_day_month_year"
        android:textColor="#26C6DA"
        android:textColorHint="#B0BEC5" />

    <EditText
        android:id="@+id/textView4"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="99dp"
        android:background="@color/material_dynamic_tertiary30"
        android:hint="@string/enter_module_id"
        android:textColor="#26C6DA"
        android:textColorHint="#B0BEC5" />
    <Button
        android:id="@+id/btnSaveTask"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/save_task"
        android:layout_marginStart="140dp"/>
    <Button
        android:id="@+id/btnUpdateTask"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/update"
        android:layout_marginStart="140dp"/>
    <Button
        android:id="@+id/btnDeleteTask"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/delete"
        android:layout_marginStart="140dp"/>
    <Button
        android:id="@+id/btnViewTask"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/view"
        android:layout_marginStart="140dp"/>
</LinearLayout>
