<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/admintwo"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".AddInstructorActivity">

    <EditText
        android:id="@+id/InstructorName" android:hint="@string/name"
        android:layout_height="50dp"
        android:layout_width="200dp"
        android:layout_marginStart="99dp"
        android:layout_marginTop="100dp"/>
    <EditText
        android:id="@+id/InstructorId" android:hint="@string/instructor_id"
        android:layout_height="50dp"
        android:layout_width="200dp"
        android:layout_marginStart="99dp" />
    <Button
        android:id="@+id/btnSaveInstructor" android:text="@string/save"
        android:layout_height="50dp"
        android:layout_width="100dp"
        android:layout_gravity="center"/>
    <Button
        android:id="@+id/btnViewInstructor" android:text="@string/view_instructor"
        android:layout_height="60dp"
        android:layout_width="110dp"
        android:layout_gravity="center"/>
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="216dp"
        android:contentDescription="@string/admin_page_image"
        android:visibility="visible"
        android:paddingTop="30dp"
        app:srcCompat="@drawable/admin"
        tools:ignore="MissingConstraints" />
</LinearLayout>