<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation = "vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding = "16dp"
    android:background="@drawable/admintwo"
    tools:context=".AdminDashboardActivity">

    <Button
        android:id = "@+id/btnAddStudent" android:text = "@string/add_student"
        android:layout_height="100dp"
        android:layout_width ="200dp"
        android:layout_marginStart="99dp"
        android:layout_marginTop="70dp"/>
    <Button
        android:id = "@+id/btnAddInstructor" android:text = "@string/add_instructor"
        android:layout_height="100dp"
        android:layout_width ="200dp"
        android:layout_marginStart="99dp"/>

    <Button
        android:id="@+id/btnAddModule"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginStart="99dp"
        android:text="@string/add_module" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="216dp"
        android:contentDescription="@string/admin_page_image"
        android:visibility="visible"
        android:paddingTop="30dp"
        app:srcCompat="@drawable/admin" />


</LinearLayout>