<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/backgroundimage"
    android:padding="24dp">

    <EditText
        android:id="@+id/registerUsername"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="170dp"
        android:layout_marginStart="99dp"
        android:textColorHint="#5D4037"
        android:hint="@string/enter_username" />

    <EditText
        android:id="@+id/registerPassword"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="99dp"
        android:layout_marginTop="12dp"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:textColorHint="#5D4037" />


    <EditText
        android:id="@+id/registerConfirmPassword"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="99dp"
        android:textColorHint="#5D4037"
        android:hint="@string/confirm_password"
        android:inputType="textPassword" />

    <Spinner
        android:id="@+id/registerRoleSpinner"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:textColorHint="#5D4037"
        android:layout_marginStart="99dp" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="120dp"
        android:gravity="center"
        android:layout_height="50dp"
        android:text="@string/register"

        android:layout_gravity="center_horizontal" />
</LinearLayout>
